fix card body suits spilling off card

--- a/src/App.css
+++ b/src/App.css
@@ -215,7 +215,7 @@ button.start {
   align-items: center;
   border: 1px black solid;
   margin: 1em 0;
-  font-size: 3em;
+  font-size: 2.75em;
   width: 6em;
 }
 
